--- a/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
+++ b/docs/versioned_docs/version-1.12.0/api/components/keyboard-aware-scroll-view.mdx
@@ -36,6 +36,7 @@ Below is a table with the most important functions and their support in various 
 | JS implementation                                             | ❌                                                                                           | ✅                                                                                                         | ❌                                                                                              | 🟠 <sup><small>2</small></sup>                                       |
 | Reacts on focused input layout changes                        | ❌                                                                                           | ❌                                                                                                         | 🟠 <sup><small>3</small></sup>                                                                  | ✅                                                                   |
 | Reacts on focus changes                                       | ✅                                                                                           | ✅                                                                                                         | ✅                                                                                              | ✅                                                                   |
+| Reacts on selection changes                                   | ❌                                                                                           | ❌                                                                                                         | 🟠 <sup><small>3</small></sup>                                                                  | ✅                                                                   |
 | Auto-scroll when user is typing and input in non visible area | ❌                                                                                           | ❌                                                                                                         | 🟠 <sup><small>3</small></sup>                                                                  | ✅                                                                   |
 | Android support                                               | ✅                                                                                           | ✅                                                                                                         | ❌                                                                                              | ✅                                                                   |
 | Maintained                                                    | ✅                                                                                           | ❌                                                                                                         | ✅                                                                                              | ✅                                                                   |
@@ -53,7 +54,7 @@ Below is a table with the most important functions and their support in various 
 > <sup>3</sup> achievable with
 > <code>KeyboardManager.reloadLayoutIfNeeded()</code>
 > usage in appropriate <code>TextInput</code> callbacks
-> (<code>onLayout</code>/<code>onChangeText</code>)
+> (<code>onLayout</code>/<code>onChangeText</code>/<code>onSelectionChange</code>)
 <!-- prettier-ignore-end -->
 
 > <sup>4</sup> since it's JS based solution it supports new architecture, but it
