--- a/docs/docs/api/components/keyboard-toolbar/index.mdx
+++ b/docs/docs/api/components/keyboard-toolbar/index.mdx
@@ -215,9 +215,10 @@ A boolean prop indicating whether to show `next` and `prev` buttons. Can be usef
 Prop allowing you to specify the brand colors of your application for `KeyboardToolbar` component. If you want to re-use already platform specific colors you can import `DefaultKeyboardToolbarTheme` object and override colors only necessary colors:
 
 ```ts
-import { DefaultKeyboardToolbarTheme } from "react-native-keyboard-controller";
+import { DefaultKeyboardToolbarTheme, type KeyboardToolbarProps } from "react-native-keyboard-controller";
+type KeyboardToolbarTheme = KeyboardToolbarProps["theme"]
 
-const theme = {
+const theme: KeyboardToolbarTheme = {
   ...DefaultKeyboardToolbarTheme,
   dark: {
     ...DefaultKeyboardToolbarTheme.dark,
