--- a/docs/blog/2024-08-16-release-1-13/index.mdx
+++ b/docs/blog/2024-08-16-release-1-13/index.mdx
@@ -30,7 +30,7 @@ Starting from the very first version of this library it was impossible to use th
 - the `Modal` window lives in its own view hierarchy;
 - `react-native` set `adjustResize` mode to `window` of the `Modal`.
 
-As a result whenever you tru to use `react-native-keyboard-controller` inside the `Modal` you will get a default behavior (but sometimes even mixed behaviors, i. e. hooks will report keyboard height and `Modal` content will be automatically resized).
+As a result whenever you try to use `react-native-keyboard-controller` inside the `Modal` you will get a default behavior (but sometimes even mixed behavior, i. e. hooks will report keyboard height and `Modal` content will be automatically resized).
 
 As a temporary workaround people simply disabled the module (to fallback to a fully default behavior):
 
@@ -48,7 +48,7 @@ useEffect(() => {
 
 While it was working approach it still had some downsides, such as inconsistent keyboard handling/animations across the app.
 
-With the new release it's not a problem anymore - now you can use all hooks and components inside the `Modal` without additional hustle and it will just work out of the box:
+With the new release it's not a problem anymore - now you can use all hooks and components inside the `Modal` without additional hassle and it will just work out of the box:
 
 <Video src="/video/modal-integration-demo.mp4" width={30} />
 
@@ -64,7 +64,7 @@ You may think that `statusBarTranslucent` prop on `KeyboardProvider` is not need
 
 ### New `offset` prop for `KeyboardGestureArea`
 
-Starting from this release I'm adding more customization to interactive keyboard handling. Now on `Android` you can add `offset` property (which can be equal to your `TextInput` height) to your `KeyboardGestureArea` component - it'll allow you to extend the keyboard area and start dismiss gesture starting from the `TextInput` top border and not from the keyboard itself.
+Starting from this release I'm adding more customization to interactive keyboard handling. On `Android` now you can add `offset` property (which can be equal to your `TextInput` height) to your `KeyboardGestureArea` component - it'll allow you to extend the keyboard area and start dismiss gesture starting from the `TextInput` top border and not from the keyboard itself.
 
 import ComparisonTable from "@site/src/components/ComparisonTable";
 
@@ -95,13 +95,15 @@ This release brings support for `react-native@0.75`. Even though `1.12.x` should
 
 ### An ability to prevent default actions in `KeyboardToolbar`
 
-Starting from `1.12.0` you had an ability to customize the behavior of `KeyboardToolbar` buttons - you could run additional actions (and add haptic feedback for example). However before it wasn't possible to prevent default actions from happening, i. e. if you pressed next button, then focus would move to the next input.
+Starting from `1.12.0` you had an ability to customize the behavior of `KeyboardToolbar` buttons - you could run additional actions (add haptic feedback, for example). However before it wasn't possible to prevent default actions from happening, i. e. if you pressed next button, then focus would move to the next input.
 
-With this release you can now prevent default actions from happening by calling `e.preventDefault()` in `onNextCallback`, `onPrevCallback`, and `onDoneCallback` props. I think it's a great addition to the existing functionality, because sometimes you may need to have this - for example if you have a custom input between two `TextInput`s (let's say a calendar picker) and when you press the next button (while you have a focus on the first input) most likely you want to open a calendar picker and not skip an input field (skipping the input field is the default behavior). So now you can call `e.preventDefault()` conditionally and perform your own action to achieve your custom requirements!
+With this release you can prevent default actions from happening by calling `e.preventDefault()` in `onNextCallback`, `onPrevCallback`, and `onDoneCallback` callbacks.
+
+I think it's a great addition to the existing functionality, because sometimes you may need to have this. For example, if you have a custom input between two `TextInput`s (let's say a calendar picker) and when you press the next button (while you have a focus on the first input) - most likely you want to open a calendar picker. But with default behavior you will skip a calendar picker and will instantly move to the second input. Using new functionality you can call `e.preventDefault()` conditionally and perform your own action to achieve your custom requirements!
 
 ### Synchronous `worklet` handler mount
 
-Hooks such as `useKeyboardHandler` or `useFocusedInputHandler` used to mount `worklet` handlers asynchronously. In most of the cases it wasn't a problem, but if the keyboard performs an animation and worklet handler is not attached yet, then you will get a broken layout - keyboard will overlap elements etc.
+Hooks such as `useKeyboardHandler` or `useFocusedInputHandler` were mounting `worklet` handlers asynchronously. In most of the cases it wasn't a problem, but if the keyboard performs an animation and `worklet` handler is not attached yet, then you will get a broken layout - keyboard will overlap elements etc.
 
 This release fixes this issue by mounting `worklet` handlers synchronously so it's not a problem anymore! 😊
 
@@ -109,18 +111,20 @@ This release fixes this issue by mounting `worklet` handlers synchronously so it
 
 Among all other improvements this release also includes a bunch of fixes, such as:
 
-- proper `ref` deallocation for `KeyboardAwareScrollView`;
+- proper `ref` de-allocation for `KeyboardAwareScrollView`;
 - better accessibility labels for `KeyboardToolbar`;
-- incorrect `height`/`progress` in `onEnd`/`didShow` events on iOS when keyboard appearance has two stages (i. e. you are using `secureTextEntry` prop on `TextInput`).
+- incorrect `height`/`progress` values in `onEnd`/`didShow` events on iOS when keyboard appearance has two stages (i. e. you are using `secureTextEntry` prop on `TextInput`).
 
-Also this release aims to improve the stability of this library - I added a bund of **e2e** tests and added scripts for running them on more devices. If before I used only **iOS 17** simulator and **Android 9** emulator, now I'm using **iOS 16/17/18** (yes, I'm testing on _**beta**_ iOS releases too) simulators and **Android 9/12** emulators.
+Also this release aims to improve the stability of this library - I added a bunch of **e2e** tests and added scripts for running them on more devices. If before I used only **iOS 17** simulator and **Android 9** emulator, now I'm using **iOS 16/17/18** (yes, I'm testing on _**beta**_ iOS releases too 😎) simulators and **Android 9/12** emulators.
 
 I hope such setup can help to catch bugs on as early stage as possible. But I'm not going to stop here - I'm also planning to add more tests, more runtimes (Android 15 is planned) and improve the stability of this library even more.
 
 ## What's next?
 
-The new `1.13.0` release is just a better revision of the `1.12.0` release. But since it brings quite a lot of new features and improvements I decided to publish it as a separate release.
+The new `1.13.0` release is just a better revision of the `1.12.0` release. But since it brings quite a lot of new features and improvements I decided to publish it as a separate release. 👀
 
-I'm planning to continuously improve this library and add more features. The ultimate goal is to fix all the bugs and implement all requested features.
+I'm planning to continuously improve this library and add more features. The ultimate goal is to fix all the bugs and implement all requested features. 😎
 
-To stay tuned follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates, and feel free to contribute to the project by submitting issues or pull requests on GitHub. Let's continue to make `react-native-keyboard-controller` an essential tool for developers building high-quality mobile applications! 💪
+If you have a pain-points when you have to deal with keyboard in `react-native` applications, please feel free to contribute to the project by submitting issues or pull requests on GitHub. Let's continue to make `react-native-keyboard-controller` an essential tool for developers building high-quality mobile applications! 💪
+
+To stay tuned follow me on [Twitter](https://twitter.com/ziusko) and [GitHub](https://github.com/kirillzyusko) for updates. Thank you for your support! 😊
