--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
 - iOS implementation
 - crash on Android when you hide a keyboard
-- RNGH on Android
+- (x) incorrect positioning of elements - why view can be stretched to full screen?
+- (-) why justifyContent: "center" and flex: 1 doesn't work?
+- (x) RNGH on Android - GestureHnalderRootView
 - (x) Android hot reloading <- pass all events from HostView to underlying view + visible property
 - docs
-- landing page - create immersive keyboard experience: draw over and behind the keyboard to deliver best possible uxer experience to your application
+- landing page - create immersive keyboard experience: draw over and behind the keyboard to deliver best possible user experience to your application
 - lottie animation
-- incorrect positioning of elements
