--- a/TODO
+++ b/TODO
@@ -1,9 +1,10 @@
 - iOS implementation
 - crash on Android when you hide a keyboard
 - (x) incorrect positioning of elements - why view can be stretched to full screen?
-- (-) why justifyContent: "center" and flex: 1 doesn't work?
-- (x) RNGH on Android - GestureHnalderRootView
+- (x) why justifyContent: "center" and flex: 1 doesn't work - first view must be without a style because otherwise styling is kind of conflicting with native styles
+- (x) RNGH on Android - GestureHandlerRootView
 - (x) Android hot reloading <- pass all events from HostView to underlying view + visible property
-- docs
+- (x) docs
 - landing page - create immersive keyboard experience: draw over and behind the keyboard to deliver best possible user experience to your application
 - lottie animation
+- add to comparison to reanimated
