--- a/docs/docs/api/over-keyboard-view/index.mdx
+++ b/docs/docs/api/over-keyboard-view/index.mdx
@@ -12,7 +12,7 @@ keywords:
 # OverKeyboardView
 
 import Lottie from "lottie-react";
-import lottie from "@site/src/components/HomepageFeatures/interactive.lottie.json";
+import lottie from "./over-keyboard-view.lottie.json";
 
 <div style={{ display: "flex", justifyContent: "center", marginBottom: 20 }}>
   <Lottie
