docs: update TODO list

--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@
 - (x) lottie animation
 - landing page - create immersive keyboard experience: draw over and behind the keyboard to deliver best possible user experience to your application
 - add to comparison to reanimated
+- e2e tests
