feat: add new animation to `useFocusedInputHandler` page

--- a/docs/docs/api/hooks/input/use-focused-input-handler.mdx
+++ b/docs/docs/api/hooks/input/use-focused-input-handler.mdx
@@ -16,6 +16,12 @@ keywords:
 
 # useFocusedInputHandler
 
+import HoverableKeyboard from "@site/src/components/HoverableKeyboard";
+
+<div className="interactive-animation">
+  <HoverableKeyboard />
+</div>
+
 `useFocusedInputHandler` is a hook that allows to intercept events from a focused `TextInput`.
 
 ## Example
