fix: hide animation in e2e tests to avoid flakiness

--- a/docs/docs/api/hooks/input/use-focused-input-handler.mdx
+++ b/docs/docs/api/hooks/input/use-focused-input-handler.mdx
@@ -18,7 +18,7 @@ keywords:
 
 import HoverableKeyboard from "@site/src/components/HoverableKeyboard";
 
-<div className="interactive-animation">
+<div className="interactive-animation lottie">
   <HoverableKeyboard />
 </div>
 
