--- a/docs/versioned_docs/version-1.13.0/api/hooks/input/use-focused-input-handler.mdx
+++ b/docs/versioned_docs/version-1.13.0/api/hooks/input/use-focused-input-handler.mdx
@@ -18,7 +18,7 @@ keywords:
 
 import HoverableKeyboard from "@site/src/components/HoverableKeyboard";
 
-<div className="interactive-animation">
+<div className="interactive-animation lottie">
   <HoverableKeyboard />
 </div>
 
