--- a/TODO
+++ b/TODO
@@ -18,11 +18,11 @@
 ### Bugs
 
 - (x) handle touches on iOS <- used `RCTTouchHandler`
-- (x) crash on Android when you hide a keyboard
 - (x) overlap navigationBar on Android
 - (x) cleanup Android implementation (create 3 separate files)
+- (x) crash on Android when you tap outside of `Touchable` area <- wrap with `TouchableWithoutFeedback`
+- (-) stretch view to full screen (iOS)/ {flex: 1} - we can specify window/height manually in JS? Do we need to have a fix on Android then? (yes, otherwise nav bar may not be covered and click in this area will lead to crash)
 - Fabric iOS
 - Fabric Android
-- stretch view to full screen (iOS)/ {flex: 1}
 - iOS hot reload
 - iOS + gesture handler
