--- a/TODO
+++ b/TODO
@@ -23,6 +23,6 @@
 - (x) crash on Android when you tap outside of `Touchable` area <- wrap with `TouchableWithoutFeedback`
 - (x) stretch view to full screen (iOS)/ {flex: 1} - we can specify window/height manually in JS? Do we need to have a fix on Android then? (yes, otherwise nav bar may not be covered and click in this area will lead to crash)
 - (x) Fabric Android
-- Fabric iOS
+- (x) Fabric iOS
 - iOS hot reload
 - iOS + gesture handler
